# shipcadence

./: .gitignore  DAGLOOM_FEEDBACK.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: analyze_repo.py
shipcadence/: __init__.py  cli.py  config.py  models.py  report.py  secrets.py
shipcadence/nodes/: alerts.py  github.py  metrics.py  transforms.py
shipcadence/pipelines/: alert.py  collect.py  compute.py
tests/: conftest.py  test_alert_pipeline.py  test_alerts.py  test_cli.py  test_nodes_github.py  test_nodes_metrics.py  test_nodes_transforms.py  test_pipeline.py  test_secrets.py
