[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipcadence"
version = "0.1.0"
description = "Lightweight DORA metrics from GitHub, powered by Dagloom"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "dagloom>=1.0.0",
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
shipcadence = "shipcadence.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
